
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/fragment_registration_1"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.adms.australianmobileadtoolkit.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">
    <LinearLayout
        android:id="@+id/fragment_accessibility_disclosure"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/barlow_bold"
            android:letterSpacing="0.1"
            android:paddingHorizontal="0dp"
            android:paddingVertical="10dp"
            android:text="@string/fragment_settings_title"
            android:textColor="@color/yellow_primary"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="15dp"
            android:textAlignment="center" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/yellow_primary" />


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textStyle="bold"
                android:textColor="@color/yellow_primary"
                android:text="@string/fragment_settings_ad_detection_override_title" />

            <CheckBox
                android:id="@+id/checkboxOverrideDefaultAdDetectionSettings"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="8" />

        </LinearLayout>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textSize="5pt"
            android:text="@string/fragment_settings_ad_detection_override_note"
            android:paddingBottom="10dp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/yellow_primary" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="15dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textStyle="bold"
            android:textColor="@color/yellow_primary"
            android:text="@string/fragment_settings_manual_log_submission_title"
            android:paddingBottom="10dp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textSize="5pt"
            android:text="@string/fragment_settings_manual_log_submission_description"
            android:paddingBottom="10dp" />

        <Button
            android:id="@+id/buttonProcessLogs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_settings_process_logs_button"
            android:theme="@style/PrimaryButton"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="15dp"
            android:background="@color/yellow_primary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="15dp" />

        <Button
            android:id="@+id/buttonBackToMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_dashboard_back_text"
            android:theme="@style/SecondaryButton" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/yellow_primary" />

    </LinearLayout>
    </ScrollView>

</LinearLayout>