<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="300dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/fragment_dialog_registration_success"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

        <ImageView
            android:id="@+id/dialog_icon"
            android:layout_gravity="center_horizontal"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/tick_icon" />

        <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/barlow_bold"
        android:textSize="17sp"
        android:letterSpacing="0.1"
        android:paddingHorizontal="0dp"
        android:paddingVertical="10dp"
        android:textAlignment="center"
        android:textColor="@color/yellow_primary"
        android:text="@string/dialog_outcome_template_title"
        />
    <TextView
        android:id="@+id/dialog_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_outcome_template_description"
        android:textColor="@color/yellow_primary"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/dialog_dismiss"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_outcome_template_dismiss"
            android:gravity="center"
            android:theme="@style/PrimaryButton"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
