<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/fragment_dialog_submit_ads"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        tools:layout_editor_absoluteX="-42dp"
        tools:layout_editor_absoluteY="0dp">


        <LinearLayout
            android:id="@+id/dialog_submit_ads_process_ad_digest"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:orientation="vertical"
            android:padding="5dp"
            android:visibility="gone"
            tools:ignore="UseSwitchCompatOrMaterialXml">


            <ImageView
                android:id="@+id/process_ad_digest_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ad_digest_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barlow_bold"
                android:letterSpacing="0.1"
                android:paddingHorizontal="0dp"
                android:paddingVertical="10dp"
                android:text="@string/dialog_submit_ads_title"
                android:textAlignment="center"
                android:textColor="@color/yellow_primary"
                android:textSize="17sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_submit_ads_description"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
            <Button
                android:id="@+id/buttonProcessMyAdDigest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/dialog_submit_ads_button_launch"
                android:theme="@style/PrimaryButton" />

            <Button
                android:id="@+id/buttonGoBackFromProcessMyAdDigest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/dialog_submit_ads_button_exit"
                android:theme="@style/SecondaryButton" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_submit_ads_processing_ad_digest"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:orientation="vertical"
            android:padding="5dp"
            tools:ignore="UseSwitchCompatOrMaterialXml"
            android:visibility="visible">

            <ImageView
                android:visibility="gone"
                android:id="@+id/process_ad_digest_complete_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:paddingBottom="10dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/tick_icon" />

            <RelativeLayout
                android:id="@+id/loadingPanel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" >

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/yellow_primary"
                    android:indeterminateTintMode="src_in"
                    android:indeterminate="true" />
            </RelativeLayout>

            <TextView
                android:id="@+id/dialog_submit_ads_processing_annotation"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:text="@string/dialog_submit_ads_processing_text"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/dialog_submit_ads_processing_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="@font/barlow_bold"
                android:letterSpacing="0.15"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:text="@string/dialog_submit_ads_processing_status_loading"
                android:textAlignment="center"
                android:textColor="@color/yellow_primary"
                android:textSize="13.5sp" />

            <FrameLayout
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp">

                <ProgressBar
                    android:id="@+id/progress_bar_processing"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="250dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:progress="0" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/progress_bar_processing_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_horizontal"
                        android:alpha="0.5"
                        android:fontFamily="@font/barlow_bold"
                        android:gravity="center"
                        android:letterSpacing="0.1"
                        android:paddingTop="2.5dp"
                        android:text="@string/dialog_submit_ads_processing_progress_analyzed"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </RelativeLayout>
            </FrameLayout>


            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="2"
                android:rowCount="1">

                <Button
                    android:id="@+id/buttonExitProcessMyAdDigest"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/dialog_submit_ads_button_cancel"
                    android:theme="@style/PrimaryButton" />

                <Button
                    android:id="@+id/buttonGoBackFromProcessMyAdDigestAlternative"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/dialog_submit_ads_button_exit"
                    android:theme="@style/SecondaryButton" />

            </GridLayout>
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
